--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -46,7 +46,7 @@
     margin-top: 32px;
     position: absolute;
     background-color: #ffffff;
-    min-width: 85px;
+    width: 85px;
     z-index: 10000;
     display: none;
     border: 1px solid #cccccc;
